# alacs

./: .devcontainer.json  GNUmakefile  MANIFESTO.md  ORIGINS.md  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  requirements.txt
python/: alacs.py  pyproject.toml
python/alacs/: __init__.py  yaml.py
python/alacs_test/: __init__.py  __main__.py  generate.py  unit_tests.py
